--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -211,3 +211,69 @@ border: 1px solid #95B8E7 !important;
 border-radius: 0 !important;
 }
 */
+
+.gridStyle {
+	position:absolute;
+    left:5px;
+	right:5px;
+	top:40px;
+	bottom:40px;
+}
+.gridbuttonDiv {
+	position:absolute;
+    left:5px;
+	right:5px;
+	top:5px;
+	height:35px;
+}
+
+.ngFooterTotalItems{
+	display:inline-block ;
+	float:left;
+}
+.ngTotalSelectContainer{
+	width:200px;
+}
+.pagination{
+	position:absolute;
+    left:127px;
+	right:0px;
+	bottom:0px;
+	height:35px;
+	margin:0 !important;
+}
+
+.pagination ul>li:first-child>a, .pagination ul>li:first-child>span {
+border-left-width: 0px !important;
+-webkit-border-bottom-left-radius: 0px !important;
+border-bottom-left-radius: 0px !important;
+-webkit-border-top-left-radius: 0px !important;
+border-top-left-radius: 0px !important;
+-moz-border-radius-bottomleft: 0px !important;
+-moz-border-radius-topleft: 0px !important;
+
+}
+.pagination ul>li>a{
+cursor:pointer;
+}
+
+.totalText {
+border-left-width: 1px ;
+-webkit-border-bottom-left-radius: 4px ;
+border-bottom-left-radius: 4px ;
+-webkit-border-top-left-radius: 4px ;
+border-top-left-radius: 4px ;
+-moz-border-radius-bottomleft: 4px ;
+-moz-border-radius-topleft: 4px ;
+position:absolute;
+left:5px;
+right:0px;
+bottom:5px;
+height:28px;
+margin:0 ;
+width:120px;
+border: 1px solid #ddd;
+color: #08c;
+text-align:center;
+line-height:28px;
+}
