--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -391,3 +391,9 @@ a{
 .item-table{
 	border:0px solid gray;
 }
+.table-left-head{
+	padding-left:5px;
+}
+.table-right-head{
+	padding-left:60px;
+}
