--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -354,7 +354,7 @@ line-height:28px;
 	border-radius: 5px 5px 5px 5px !important;
 	border:1px solid #95B8E7 !important;
 	padding: 5px !important;
-	width:700px !important;
+	width:800px !important;
 }
 a{
 	cursor:pointer !important;
@@ -400,3 +400,9 @@ a{
 .table-right-head{
 	padding-left:60px;
 }
+.listdiv{
+	overflow-y:auto;
+	width:100%;
+	max-height:182px; 
+	z-index:-1;
+}	
