1,查询,完成了日期转换分页

--- a/static/app/css/app.css
+++ b/static/app/css/app.css
@@ -218,6 +218,10 @@ border-radius: 0 !important;
 	right:5px;
 	top:40px;
 	bottom:40px;
+	outline:none;
+}
+div{
+	outline:none;
 }
 .gridbuttonDiv {
 	position:absolute;
